--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "vee-validate": "^4.5.8",
     "vue": "^3.2.47",
     "vue-cookies": "^1.8.3",
+    "vue-observe-visibility": "^1.0.0",
     "vue-router": "^4.2.0",
+    "vue-virtual-scroll-list": "^2.3.5",
+    "vue3-virtual-list": "^1.0.2",
     "vuelidate": "^0.7.7",
     "vuex": "^4.1.0",
     "yup": "^1.2.0"
