--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.3.0",
     "axios": "^1.4.0",
+    "socket.io-client": "^4.7.2",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.47",
     "vue-cookies": "^1.8.3",
     "vue-observe-visibility": "^1.0.0",
     "vue-router": "^4.2.0",
+    "vue-socket.io": "^3.0.10",
     "vue-virtual-scroll-list": "^2.3.5",
     "vue3-virtual-list": "^1.0.2",
     "vuelidate": "^0.7.7",
